# BeatBridge

./: .gitignore  README.md  main.py  mockup.html  pyproject.toml  requirements.txt
BarBridgeApp/: project.yml
BarBridgeApp/BarBridge/: BarBridgeApp.swift  ContentView.swift  DropZoneView.swift  KnobView.swift  LEDComponents.swift  Models.swift  ProcessedFilesView.swift  ProcessingEngine.swift  SettingsView.swift  SevenSegmentDisplay.swift
barbridge/: __init__.py  __main__.py  app.py  cli.py  config.py  constants.py
barbridge/core/: alignment.py  analyzer.py  cache.py  metadata.py  pipeline.py  resampler.py
barbridge/ui/: controls.py  drop_zone.py  export_handle.py  status.py
barbridge/utils/: ffmpeg.py  permissions.py
