[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "barbridge"
version = "1.0.0"
description = "A Digital Timing Jig for macOS — automates alignment, resampling, and metadata tagging of audio/MIDI clips for DAW-to-DAW transfer."
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "flet>=0.21.0",
    "flet-dropzone>=0.3.0",
    "soundfile>=0.12.0",
    "mido>=1.3.0",
]

[project.scripts]
barbridge = "barbridge.__main__:main"

[tool.setuptools.packages.find]
include = ["barbridge*"]
